--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -1,7 +1,7 @@
 
 
 h1, h2, h3, h4 {
-    color: #1b1636;
+    color: #0f2d41;
 }
 
 h1 {
@@ -15,11 +15,11 @@ a {
 }
 
 a:visited {
-    color: #5d4fa8;
+    color: #1b7a9e;
 }
 
 .wy-nav-top {
-    background-color: #1b1636; !important;
+    background-color: #0f2d41; !important;
 }
 
 .wy-nav-top a:visited {
@@ -27,7 +27,7 @@ a:visited {
 }
 
 .wy-side-nav-search {
-    background-color: #00c2aa!important;
+    background-color: #205d87!important;
 }
 
 .wy-side-nav-search a:visited {
@@ -35,15 +35,15 @@ a:visited {
 }
 
 .wy-side-scroll {
-    background-color: #1b1636;
+    background-color: #0f2d41;
 }
 
 .wy-nav-side {
-    background-color: #1b1636;
+    background-color: #0f2d41;
 }
 
 thead {
-    background-color: #1b1636;
+    background-color: #0f2d41;
 }
 
 .head {
@@ -54,7 +54,7 @@ thead {
     border-radius: 2px;
     height: 40px;
     font-size: 14px;
-    border-color: #00a38f;
+    border-color: #205d87;
 }
 
 .wy-menu-vertical a {
@@ -64,49 +64,49 @@ thead {
 }
 
 .wy-menu-vertical a:hover {
-    background-color: #312960;
+    background-color: #205d87;
 }
 
 .wy-menu-vertical li.toctree-l1.current>a {
-    border-bottom: solid 1px #312960;
-    border-top: solid 1px #312960;
+    border-bottom: solid 1px #205d87;
+    border-top: solid 1px #205d87;
 }
 
 .wy-menu-vertical li.toctree-l2.current>a {
-    background-color: #312960;
+    background-color: #205d87;
 }
 
 .wy-menu-vertical li.toctree-l2.current li.toctree-l3>a {
-    background-color: #251f48;
+    background-color: rgba(0, 0, 0, 0.87);
 }
 
 .wy-menu-vertical li.current>a {
-    background-color: #312960;
+    background-color: #205d87;
     color: #fff;
 }
 
 .wy-menu-vertical li.current>a {
-    background-color: #312960;
+    background-color: #205d87;
     color: #fff;
 }
 
 .wy-menu-vertical li.current ul {
-    background-color: #251f48;
+    background-color: #205d87;
     color: #fff;
 }
 
 .wy-menu-vertical li.toctree-l2 a {
     color: #fff;
-    border-right: #251f48;
+    border-right: rgba(0, 0, 0, 0.87);
 }
 
 .wy-menu-vertical li.current>a:hover {
-    background-color: #312960;
+    background-color: #205d87;
 }
 
 .wy-menu-vertical li.toctree-l2 a:hover {
     color: #fff;
-    background-color: #312960;
+    background-color: #205d87;
 }
 
 .rst-content .attention {
@@ -119,7 +119,7 @@ thead {
 
 .toctree-l1:last-child .external {
     display: block;
-    background-color: #312960;
+    background-color: #205d87;
     color: #fff;
     text-transform: uppercase;
     margin: 1rem 0 0 0;
@@ -130,5 +130,5 @@ thead {
 }
 
 .toctree-l1 .external:hover {
-    background-color: #251f48;
+    background-color: #205d87;
 }
